--- a/environment.yml
+++ b/environment.yml
@@ -10,8 +10,6 @@ channels:
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
   - argon2-cffi=21.3.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py39hb9d737c_2
   - asttokens=2.0.5=pyhd8ed1ab_0
@@ -82,7 +80,6 @@ dependencies:
   - libbrotlidec=1.0.9=h166bdaf_7
   - libbrotlienc=1.0.9=h166bdaf_7
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=11.2.0=h1d223b6_15
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libglib=2.68.4=h174f98d_1
   - libgomp=11.2.0=h1d223b6_15
@@ -123,11 +120,9 @@ dependencies:
   - networkx=2.7.1=pyhd3eb1b0_0
   - notebook=6.4.10=pyha770c72_0
   - numexpr=2.8.1=py39h6abb31d_0
-  - numpy=1.21.5=py39he7a7128_1
-  - numpy-base=1.21.5=py39hf524024_1
+  - numpy=1.21.6
   - ogb=1.3.3=pyhd8ed1ab_0
   - openh264=2.1.1=h4ff587b_0
-  - openssl=3.0.3=h166bdaf_0
   - outdated=0.2.1=pyhd8ed1ab_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.1=py39h295c915_1
@@ -154,13 +149,11 @@ dependencies:
   - pyparsing=3.0.4=pyhd3eb1b0_0
   - pyrsistent=0.18.1=py39hb9d737c_1
   - pysocks=1.7.1=py39h06a4308_0
-  - python=3.9.7=hf930737_3_cpython
+  - python=3.9
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
   - python-levenshtein=0.12.2=py39hb9d737c_2
   - python_abi=3.9=2_cp39
-  - pytorch=1.11.0=py3.9_cuda10.2_cudnn7.6.5_0
-  - pytorch-mutex=1.0=cuda
   - pytz=2021.3=pyhd3eb1b0_0
   - pyzmq=22.3.0=py39headdf64_2
   - readline=8.1.2=h7f8727e_1
@@ -179,8 +172,6 @@ dependencies:
   - threadpoolctl=3.1.0=pyh8a188c0_0
   - tinycss2=1.1.1=pyhd8ed1ab_0
   - tk=8.6.11=h1ccaba5_0
-  - torchaudio=0.11.0=py39_cu102
-  - torchvision=0.12.0=py39_cu102
   - tornado=6.1=py39hb9d737c_3
   - tqdm=4.63.0=pyhd3eb1b0_0
   - traitlets=5.1.1=pyhd8ed1ab_0
@@ -216,10 +207,11 @@ dependencies:
     - ax-platform==0.2.5.1
     - botorch==0.6.4
     - cachetools==5.0.0
-    - captum==0.0.1
+    - captum
     - cilog==1.2.3
     - cloudpickle==2.0.0
     - dgllife==0.2.9
     - dive-into-graphs==0.2.0
+    - torch_geometric
 
 prefix: /data/anaconda3/envs/HIGH-PPI
